@@ -26,6 +26,7 @@ import org.apache.tinkerpop.gremlin.process.traversal.SackFunctions;
 import org.apache.tinkerpop.gremlin.process.traversal.Scope;
 import org.apache.tinkerpop.gremlin.process.traversal.Traverser;
 import org.apache.tinkerpop.gremlin.process.traversal.step.TraversalOptionParent;
+import org.apache.tinkerpop.gremlin.process.traversal.step.util.Tree;
 import org.apache.tinkerpop.gremlin.process.traversal.util.Metrics;
 import org.apache.tinkerpop.gremlin.process.traversal.util.TraversalMetrics;
 import org.apache.tinkerpop.gremlin.structure.Column;
@@ -106,9 +107,12 @@ public class GraphSONTypeSerializerV3d0 extends AbstractGraphSONTypeSerializer {
             return classMap.get(c);
 
         final Class mapped;
-        if (Map.class.isAssignableFrom(c))
-            mapped = Map.class;
-        else if (List.class.isAssignableFrom(c))
+        if (Map.class.isAssignableFrom(c)) {
+            if (Tree.class.isAssignableFrom(c))
+                mapped = Tree.class;
+            else
+                mapped = Map.class;
+        } else if (List.class.isAssignableFrom(c))
             mapped = List.class;
         else if (Set.class.isAssignableFrom(c))
             mapped = Set.class;
